# pyuvdata

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  TODO  appveyor.yml  environment.yaml  paper.bib  paper.md  pyproject.toml  setup.cfg  setup.py  test_coverage.sh  tutorial.uvfits
.circleci/: config.yml
.github/: CITATION.cff  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build_docs.yaml  draft-pdf.yml  external_tests.yaml  macosx_ci.yaml  macosx_windows_ci.yaml  numba_test.yaml  publish-to-test-pypi.yaml  warning_test.yaml
ci/: _activate_current_env.sh  appveyor.yml  azure-piplines.yml  codecov.yml  docs.yml  hera_cal.yml  hera_qm.yml  install-circle.sh  install.ps1  install_conda.sh  make_dev_version.sh  pyuvdata_doctests.yml  pyuvdata_linting.yml  pyuvdata_min_deps_tests.yml  pyuvdata_min_versions_tests.yml  pyuvdata_publish.yml  pyuvdata_tests.yml  pyuvdata_tests_311.yml  pyuvdata_tests_mac_arm.yaml  pyuvdata_tests_mac_arm.yml  pyuvdata_tests_windows.yml  pyuvdata_warning_test.yml  rtd_env.yml  run_with_env.cmd  test_requirements.txt
docs/: Makefile  analytic_beam_tutorial.rst  analytic_beams.rst  beam_interface.rst  beam_interface_tutorial.rst  cal_parameters.rst  conf.py  conftest.py  conventions.rst  cst_settings_yaml.rst  developer_docs.rst  fast_calh5_meta.rst  fast_uvh5_meta.rst  functions.rst  index.rst  installation.rst  known_telescopes.rst  make_beam_parameters.py  make_cal_parameters.py  make_flag_parameters.py  make_index.py  make_parameters.py  make_telescope.py  make_uvbeam.py  make_uvcal.py  make_uvdata.py  make_uvflag.py  miriad.rst  parameters.rst  requirements.txt  tutorial.rst  tutorial_data_note.rst  utility_functions.rst  uvbeam.rst  uvbeam_tutorial.rst  uvcal.rst  uvcal_parameters.rst  uvcal_tutorial.rst  uvdata.rst  uvdata_parameters.rst  (+3 more)
docs/references/: AIPSMEM117.PS  aasjournal.bst  beamfits_memo.tex  calfits_memo.tex  calh5.tex  making_release.md  phasing.bib  phasing.tex  uvcal.tex  uvh5_memo.tex
pyuvdata/: __init__.py  aipy_extracts.py  astropy_interface.py  beamfits.py  branch_scheme.py  cal.py  calfits.py  conftest.py  cst_beam.py  cst_reader.py  docstrings.py  fhd.py  fhd_cal.py  hdf5_utils.py  miriad.py  ms.py  ms_utils.py  mwa_beam.py  mwa_corr_fits.py  parameter.py  telescopes.py  utils.py  utils.pyx  uvbase.py  uvbeam.py  uvcal.py  uvdata.py  uvfits.py  uvflag.py  uvh5.py  uvhdf5.py  version.py
pyuvdata/data/: 1061316296.uvfits  1133866760.uvfits  HERABEAM.FITS  __init__.py  corrected2_zen.2458106.28114.ant012.HH.uvfits  fewant_randsrc_airybeam_Nsrc100_10MHz.uvfits  fewant_randsrc_airybeam_Nsrc100_10MHz.uvh5  hera19_8hrs_uncomp_10MHz_000_05.003111-05.033750.uvfits  mwa128_ant_layouts.npz  mwa_full_EE_test.h5  mwa_integration_time.uvh5  ref_1.1_uniform.uvfits  snap_correlation_1525298596.yaml  snap_correlation_1526493089.npz  snap_correlation_1532604509.npz  snap_correlation_1532604509.yaml  test_redundant_array.uvfits  test_redundant_array.uvh5  zen.2456865.60537.xy.uvcRREAA.uvh5  zen.2457698.40355.xx.HH.uvc.fits  zen.2457698.40355.xx.HH.uvcA.uvh5  zen.2457698.40355.xx.HH.uvcAA.testuvflag.h5  zen.2457698.40355.xx.HH.uvcAA.uvh5  zen.2457698.40355.xx.fitsA  zen.2457698.40355.xx.gain.calfits  zen.2458098.45361.HH.omni.calfits_downselected  zen.2458098.45361.HH.uvh5_downselected  zen.2458116.30448.HH.flagged_abs.calfits  zen.2458116.30448.HH.uvh5  zen.2458432.34569.uvh5  zen.2458661.23480.HH.uvh5  zen.2458661.23480.HH_oldproj_icrs.uvh5
pyuvdata/src/: aipy_compat.h  dio.c  hio.h  miriad.h  miriad_wrap.cpp  miriad_wrap.h  uvio.c
pyuvdata/tests/: Line_Profiler_full.out  __init__.py  conftest.py  itrf_rotation.py  mwa128_ant_layouts.npz  test_aipy_extracts.py  test_beamfits.py  test_cal.py  test_calfits.py  test_cst_beam.py  test_cst_reader.py  test_docstrings.py  test_fhd.py  test_fhd_cal.py  test_itrf_rotation.py  test_miriad.py  test_ms.py  test_ms_utils.py  test_mwa_beam.py  test_mwa_corr_fits.py  test_parameter.py  test_pyuvdata_inspect.py  test_telescopes.py  test_utils.py  test_uvbase.py  test_uvbeam.py  test_uvcal.py  test_uvdata.py  test_uvfits.py  test_uvflag.py  test_uvh5.py  test_uvhdf5.py  test_version.py
pyuvdata/uvbeam/: __init__.py  analytic_beam.py  beam_interface.py  beamfits.py  cst_beam.py  feko_beam.py  initializers.py  mwa_beam.py  uvbeam.py  uvbeam.pyx
pyuvdata/uvcal/: __init__.py  calfits.py  calh5.py  fhd_cal.py  initializers.py  ms_cal.py  uvcal.py
pyuvdata/uvdata/: __init__.py  aipy_extracts.py  corr_fits.pyx  fhd.py  initializers.py  mir.py  mir_meta_data.py  mir_parser.py  miriad.py  ms.py  mwa_corr_fits.py  uvdata.py  uvfits.py  uvh5.py
pyuvdata/uvflag/: __init__.py  uvflag.py
rust/: bls.rs  coordinates.rs  lib.rs
scripts/: check_uvfits_equal.py  convert_to_uvfits.py  fhd_batch_convert.py  generate_snap_example_v2.py  import_snap.py  make_bad_fhd_files.pro  miriad_to_uvfits.py  pyuvdata_inspect.py  readwrite_uvfits.py  renumber_ants.py  test_cover_noinstall.sh  test_coverage.sh  test_import_snap.sh  test_uvfits_equal.py  truncate_fhd_files.pro  uvfits_memtest.py
src/: uv.py
src/pyuvdata/: __init__.py  analytic_beam.py  apply_uvflag.py  beam_interface.py  datasets.py  docstrings.py  hdf5_utils.py  ms_utils.py  parameter.py  telescopes.py  utils.py  utils.pyx  uvbase.py  uvcalibrate.py
tests/: __init__.py  conftest.py  test_analytic_beam.py  test_apply_uvflag.py  test_beam_interface.py  test_ms_utils.py  test_parameter.py  test_telescopes.py  test_utils.py  test_uvbase.py  test_uvcalibrate.py  test_uvdata.py  test_warning_check.py
tests/utils/: __init__.py  conftest.py  test_apply_uvflag.py  test_array_collapse.py  test_bls.py  test_bls_numba.py  test_bltaxis.py  test_coordinates.py  test_helpers.py  test_lst.py  test_phase_center_catalog.py  test_phasing.py  test_plotting.py  (+6 more)
uvdata/: __init__.py  cal.py  calfits.py  fhd.py  miriad.py  ms.py  parameter.py  telescopes.py  utils.py  uv.py  uvbase.py  uvdata.py  uvfits.py
(+581 files in other folders)
