[package]
 name    = "_utils_rs"
 version = "0.1.0"
 edition = "2021"

[features]
 default          = [ "extension-module" ]
 extension-module = [ "pyo3/extension-module" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
 itertools   = "0.12.1"
 lazy_static = "1.4.0"
 ndarray     = { version = "~0.16" }
 numpy       = "0.23"
 pyo3        = { version = "0.23.5" }

[dev-dependencies]
 ndarray = { version = "~0.16", features = [ "approx" ] }
 approx  = "0.5.1"

[lib]
 name       = "_utils_rs"
 crate-type = [ "cdylib", "lib" ]
 path       = "rust/lib.rs"


[profile.release]
 lto           = "thin"
 opt-level     = 3
 codegen-units = 1
 strip         = "symbols"
 panic         = "abort"


[profile.dev]
 lto           = "thin"
 opt-level     = 3
 codegen-units = 1
 strip         = "symbols"
 panic         = "abort"
