[build-system]
requires = ["setuptools>=61",
            "wheel",
            "setuptools_scm>=7.0.3",
            "oldest-supported-numpy",
            "cython>=3.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[darglint]
docstring_style = "numpy"

[tool.black]
skip_magic_trailing_comma = true
