[metadata]
description-file = README.md

[tool:pytest]
addopts = --ignore=scripts -n auto --dist=loadfile

[flake8]
ignore = W503, E203, N806
max-line-length = 88
per-file-ignores =
    pyuvdata/tests/*.py: D
    pyuvdata/*/tests/*.py: D
    docs/*.py: D,A
    setup.py: D
# remove the D from following lines as they get converted to numpy style docstrings:
# remove the A from following lines as builtin shadowing is fixed:
# remove the N802, N803 from following lines as functions and input variables are renamed to pep8 style:
    pyuvdata/uvflag/uvflag.py: D
    pyuvdata/uvdata/uvdata.py: N802
    pyuvdata/uvbeam/mwa_beam.py: N802
    pyuvdata/utils.py: N802, N803
    pyuvdata/tests/test_utils.py: D,N802
    pyuvdata/tests/__init__.py: D,N802
docstring-convention = numpy
select = C,E,W,T4,B9,F,D,A,N,RST,B
# List of other checks to consider adding:
# it's recommended to have max-complexity ~ 18
# max-complexity = 18
# flake8-eradicate
# flake8-isort
# flake8-rst
# darglint # This currently doesn't support numpy docstring style, should keep an eye on it
# flake8-copyright
# flake8-ownership
