[metadata]
description_file = README.md

[flake8]
# B905 is for using zip without the `strict` argument, which was introduced in
# python 3.10. We should probably add this check (remove it from the ignore) when we
# require 3.10.
# B907 wants us to not have quotes inside fstrings. We decided they helped with readability.
# B028 wants us to set the stacklevel for warnings, we decided that was unnecessary
# B038 checks for mutating iterators, but seems like a buggy check
ignore = W503, E203, N806, B905, B907, B028, B038
max-line-length = 88
per-file-ignores =
    pyuvdata/tests/*.py: D
    pyuvdata/*/tests/*.py: D
    docs/*.py: D,A
    setup.py: D
# remove the following lines as functions and input variables are renamed to pep8 style:
    pyuvdata/uvdata/uvdata.py: N802
    pyuvdata/uvbeam/mwa_beam.py: N802
    pyuvdata/utils.py: N802, N803
    pyuvdata/tests/test_utils.py: D,N802
    pyuvdata/tests/__init__.py: D,N802
docstring-convention = numpy
select = C,E,W,T4,B9,F,D,A,N,RST,B
rst-roles =
    class
    func
    mod
    data
    const
    meth
    attr
    exc
    obj
# List of other checks to consider adding:
# it's recommended to have max-complexity ~ 18
# max-complexity = 18
# flake8-eradicate
# flake8-isort
# flake8-rst
# flake8-copyright
# flake8-ownership
